# Debate-bots

./: .gitignore  Political_bot.py  README.md  config.json  example_keys.json  pyproject.toml
debate/: __init__.py  app.py  config.py  display.py  llm_adapter.py  simulator.py
examples/: run_console.py
tests/: test_simulator.py
